<resources>
    <string name="map_api_key">AIzaSyBV5ET2AS9fBZq2egMfzvmY1airJb8-fls</string>

    <string name="app_name">PAWSsible</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email_address_here">Enter your Email Address here</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration">REGISTRATION</string>
    <string name="register">Register</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string-array name="user_type_array">
        <item>Owner</item>
        <item>Customer</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="allergies">Allergies:</string>
    <string name="description">Description:</string>
    <string name="dog_breed">Dog Breed:</string>
    <string name="likes">Likes:</string>
    <string name="dislikes">DisLikes:</string>
    <string name="age_in_months">Age in Months:</string>
    <string name="hourly_rate">Hourly Rate:</string>
    <string name="proceed_booking">Proceed Booking</string>
    <string name="enter_hours">Enter hours</string>
    <string name="proceed_payment">Proceed Payment</string>
    <string name="grand_total">Grand Total:</string>
    <string name="tax_12">Tax@12% :</string>
    <string name="subtotal">SubTotal:</string>
    <string name="enter_dog_breed">Enter Dog Breed</string>
    <string name="add_dog">Add Dog</string>
    <string name="enter_the_allergies_of_the_dog">Enter the Allergies of the Dog</string>
    <string name="enter_the_dislikes_of_the_dog">Enter the Dislikes of the Dog</string>
    <string name="enter_the_likes_of_dog">Enter the Likes of dog</string>
    <string name="enter_hourly_rate">Enter Hourly Rate</string>
    <string name="enter_age_in_months">Enter Age in Months</string>
    <string name="enter_description_here">Enter Description here.</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="image_url">Image URL:</string>
    <string name="enter_picture_of_dog_url">Enter picture of dog url</string>
    <string name="personal_details">Personal Details</string>
    <string name="booking_history">Booking History</string>
    <string name="requests">Requests</string>
    <string name="personal_questionnaire">Personal Questionnaire</string>
    <string name="logout">Logout</string>
    <string name="save_questionnaire">Save Questionnaire</string>
    <string name="accept_booking">Accept Booking</string>
    <string name="experience">Experience</string>
    <string name="previous_experience_in_months">Previous Experience in months</string>
    <string name="track_customer">Track Customer</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="reject_booking">Reject Booking</string>
    <string name="complete_booking">Complete Booking</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="select_booking_date">Select Booking Date</string>
    <string name="delete_dog">Delete Dog</string>
    <string name="activate_dog">Activate Dog</string>
    <string name="enter_address">Enter Address</string>

</resources>